<resources>
    <string name="app_name">Second Helping</string>
    <string name="prompt_email">E-mail address</string>
    <string name="prompt_password">Password</string>
    <string name="business_name">Business Name</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="phone_number">Phone Number</string>
    <string name="contact_name">Contact Name</string>
    <string name="pick_up_time">Pick-up Time</string>
    <string name="additional_instructions">Additional Instructions</string>
    <string name="notify_button_text">Notify</string>
    <string name="facebook_application_id" translatable="false">APP_ID</string>
    <!-- Facebook Application ID, prefixed by 'fb'.  Enables Chrome Custom tabs. -->
    <string name="facebook_login_protocol_scheme" translatable="false">fbAPP_ID</string>

    <string name="enter_name">Enter name</string>
    <string name="enter_email">Enter email</string>
    <string name="confirm_email">Confirm email</string>
    <string name="enter_password">Enter password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up">Sign up</string>
    <string name="enter_new_password">enter new password</string>
    <string name="enter_username">enter username</string>
    <string name="opt_out">Opt-Out</string>

</resources>
