<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:hint="@string/business_name"
        android:id="@+id/business_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:hint="@string/address_line_1"
        android:id="@+id/address_line1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:hint="@string/address_line_2"
        android:id="@+id/address_line2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:hint="@string/phone_number"
        android:id="@+id/business_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:hint="@string/contact_name"
        android:id="@+id/contact_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:hint="@string/pick_up_time"
        android:id="@+id/pick_up_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:hint="@string/additional_instructions"
        android:id="@+id/additional_instructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/notify_button"
        android:text="@string/notify_button_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    
</LinearLayout>