<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
<EditText
    android:hint="@string/enter_email"
    android:inputType="textEmailAddress"
    android:id="@+id/user_email"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/enter_password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_new_password"/>

    <Button
        android:id="@+id/signup_bttn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"/>
</LinearLayout>